test(app): Add User model
